2020-01-16 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h: Add
	Intel S2600BPB product id.

	* ipmi-oem/ipmi-oem-intel.c (_get_smtp_configuration_data)
	(_set_smtp_configuration_data),
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-spec.h:
	Update missing comments on motherboard support.

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-spec.h:
	Remove accidental Dell sensor types included in header.

	* libfreeipmi/include/freeipmi/spec/oem: Remove unnecessary
	includes of stdint.h.

	Begin Intel OEM extensions refactoring.

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-comp-code-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-event-reading-type-code-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-number-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-slave-address-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-spec.h:
	Splice out motherboard specific extensions into new files and
	rename a number of macros & variables accordingly.  In some cases,
	merge different named macros into common named macros.

	* libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-intel-spec.c:
	Removed file.

	* libfreeipmi/include/freeipmi/spec/oem/intel/ipmi-comp-code-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/intel/ipmi-event-reading-type-code-oem-intel-common-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/intel/ipmi-event-reading-type-code-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/intel/ipmi-event-reading-type-code-oem-intel-quanta-qssc-s4r-spec.h,