@@ -228,6 +228,19 @@ extern unsigned int ipmi_oem_intel_specific_firmware_update_status_sensor_max_in
  * Intel S2600WT2
  * Intel S2600WTT
  * Intel S2600GZ
+ */
+
+#define IPMI_SENSOR_TYPE_MEMORY_OEM_INTEL_EVENT_DATA2_MIRRORING_DOMAIN_BITMASK 0xF0
+#define IPMI_SENSOR_TYPE_MEMORY_OEM_INTEL_EVENT_DATA2_MIRRORING_DOMAIN_SHIFT   4
+
+#define IPMI_SENSOR_TYPE_MEMORY_OEM_INTEL_EVENT_DATA2_MIRRORING_DOMAIN_0 0
+#define IPMI_SENSOR_TYPE_MEMORY_OEM_INTEL_EVENT_DATA2_MIRRORING_DOMAIN_1 1
+
+/*
+ * Intel S2600KP
+ * Intel S2600WT2
+ * Intel S2600WTT
+ * Intel S2600GZ
  * Intel S2600BPB
  */
 
@@ -336,12 +349,6 @@ extern unsigned int ipmi_oem_intel_specific_firmware_update_status_sensor_max_in
 #define IPMI_SENSOR_MEMORY_DEVICE_ENABLED_EVENT_DATA2_OR_EVENT_DATA3_OEM_INTEL_RAS_MODE_MIRRORING    1
 #define IPMI_SENSOR_MEMORY_DEVICE_ENABLED_EVENT_DATA2_OR_EVENT_DATA3_OEM_INTEL_RAS_MODE_LOCKSTEP     2
 #define IPMI_SENSOR_MEMORY_DEVICE_ENABLED_EVENT_DATA2_OR_EVENT_DATA3_OEM_INTEL_RAS_MODE_RANK_SPARING 4
-
-#define IPMI_SENSOR_TYPE_MEMORY_OEM_INTEL_EVENT_DATA2_MIRRORING_DOMAIN_BITMASK 0xF0
-#define IPMI_SENSOR_TYPE_MEMORY_OEM_INTEL_EVENT_DATA2_MIRRORING_DOMAIN_SHIFT   4
-
-#define IPMI_SENSOR_TYPE_MEMORY_OEM_INTEL_EVENT_DATA2_MIRRORING_DOMAIN_0 0
-#define IPMI_SENSOR_TYPE_MEMORY_OEM_INTEL_EVENT_DATA2_MIRRORING_DOMAIN_1 1
 
 #define IPMI_SENSOR_TYPE_MEMORY_OEM_INTEL_EVENT_DATA2_RANK_ON_DIMM_BITMASK 0x03
 #define IPMI_SENSOR_TYPE_MEMORY_OEM_INTEL_EVENT_DATA2_RANK_ON_DIMM_SHIFT   0
