@@ -30,6 +30,24 @@
 #include "ipmi-sel-defs.h"
 #include "ipmi-sel-common.h"
 
+int sel_string_output_intel_xeon_broadwell_event_data2_discrete_oem (ipmi_sel_ctx_t ctx,
+                                                                     struct ipmi_sel_entry *sel_entry,
+                                                                     uint8_t sel_record_type,
+                                                                     char *tmpbuf,
+                                                                     unsigned int tmpbuflen,
+                                                                     unsigned int flags,
+                                                                     unsigned int *wlen,
+                                                                     struct ipmi_sel_system_event_record_data *system_event_record_data);
+
+int sel_string_output_intel_xeon_broadwell_event_data3_discrete_oem (ipmi_sel_ctx_t ctx,
+                                                                     struct ipmi_sel_entry *sel_entry,
+                                                                     uint8_t sel_record_type,
+                                                                     char *tmpbuf,
+                                                                     unsigned int tmpbuflen,
+                                                                     unsigned int flags,
+                                                                     unsigned int *wlen,
+                                                                     struct ipmi_sel_system_event_record_data *system_event_record_data);
+
 int sel_string_output_intel_xeon_broadwell_event_data2_event_data3 (ipmi_sel_ctx_t ctx,
                                                                     struct ipmi_sel_entry *sel_entry,
                                                                     uint8_t sel_record_type,
